--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
+				<section>Introduction to QGIS
+				Jack Tieszen</section>
 				<section>Slide 2</section>
 			</div>
 		</div>
