--- a/index.html
+++ b/index.html
@@ -16,9 +16,42 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Introduction to QGIS
-				Jack Tieszen</section>
-				<section>Slide 2</section>
+				<section>Introduction to QGIS</section>
+				<section>Contents</section>
+				<section>Who/What is this program for?</section>
+				<section>Goals of this workshop</section>
+				<section>What is GIS</section>
+				<section>Goals for GIS</section>
+				<section>The use of GIS for non-geography disciplines</section>
+				<section>Why QGIS</section>
+				<section>What we will be doing today</section>
+				<section>What you will need</section>
+				<section>Additional Plugins</section>
+				<section>Before using QGIS: Check your images</section>
+				<section>Before using QGIS: Make sure you have the right repository</section>
+				<section>Set up OSM Map</section>
+				<section>Georeferencing: What is it?</section>
+				<section>Georeferencing</section>
+				<section>Georeferencing</section>
+				<section>Georeferencing</section>
+				<section>Georeferencing</section>
+				<section>Geomerging</section>
+				<section>Geomerging</section>
+				<section>GitHub</section>
+				<section>Make a GitHub repository</section>
+				<section>Make a GitHub respository continued</section>
+				<section>QGIS to GitHub</section>
+				<section>Mapbox: What is it?</section>
+				<section>How to put layers into Mapbox</section>
+				<section>MapBox continued</section>
+				<section>Flaneur</section>
+				<section>Flaneur continued</section>
+				<section>Flaneur continued</section>
+				<section>Flaneur continued</section>
+				<section>Flaneur continued</section>
+				<section>Flaneur continued</section>
+				<section>Flaneur continued</section>
+				<section>Additional</section>
 			</div>
 		</div>
 
