--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Introduction to QGIS</section>
+				<section> <title>Introduction to QGIS</title>
+					<li> By Jack Tieszen </li>
+				</section>
 				<section>Contents</section>
 				<section>Who/What is this program for?</section>
 				<section>Goals of this workshop</section>
