--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section> <title>Introduction to QGIS</title>
-					<li> By Jack Tieszen </li>
+				<section> 
+					<title>Introduction to QGIS</title>
+					<p> By Jack Tieszen </p>
 				</section>
 				<section>Contents</section>
 				<section>Who/What is this program for?</section>
