--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		<div class="reveal">
 			<div class="slides">
 				<section> 
-					<p style="font-size:18px;">Introduction to QGIS</p>
-					<p> By Jack Tieszen </p>
+					<p>Introduction to QGIS</p>
+					<p style="font-size:20px;"> By Jack Tieszen </p>
 				</section>
 				<section>Contents</section>
 				<section>Who/What is this program for?</section>
