--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
 					<p>Introduction to QGIS</p>
 					<p style="font-size:20px;"> By Jack Tieszen </p>
 				</section>
-				<section>Contents</section>
+				<section>
+					<p>Contents</p>
+					<li>What/Who this program is for?</li>
+					<li>What is GIS?</li>
+					<li>The Workshop</li>
+					<li>Georeferencing</li>
+					<li>Geomerging</li>
+					<li>GitHub</li>
+					<li>Mapbox</li>
+					<li>Flaneur Publishing</li>
+				</section>
 				<section>Who/What is this program for?</section>
 				<section>Goals of this workshop</section>
 				<section>What is GIS</section>
