--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<p style="font-size:20px;"> By Jack Tieszen </p>
 				</section>
 				<section>
-					<p>Contents</p>
+					<p style="font-size:80px;">Contents</p>
 					<li>What/Who this program is for?</li>
 					<li>What is GIS?</li>
 					<li>The Workshop</li>
