--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="reveal">
 			<div class="slides">
 				<section> 
-					<p>Introduction to QGIS</p>
+					<p style="font-size:80px;">Introduction to QGIS</p>
 					<p style="font-size:20px;"> By Jack Tieszen </p>
 				</section>
 				<section>
