--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
 					<li>Mapbox</li>
 					<li>Flaneur Publishing</li>
 				</section>
-				<section>Who/What is this program for?</section>
+				<section>
+					<p style="font-size:80px;">Who/What is this program for?</p>
+				![](img/Qgis.png)
+					<p>Testing</p>
+				
+				</section>
 				<section>Goals of this workshop</section>
 				<section>What is GIS</section>
 				<section>Goals for GIS</section>
