--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</section>
 				<section>
 					<p style="font-size:80px;">Who/What is this program for?</p>
-				![](img/Qgis.png)
+					<img src="Qgis.png" style="width:500px;height:600px;>
 					<p>Testing</p>
 				
 				</section>
