--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 					<li>Flaneur Publishing</li>
 				</section>
 				<section>
-					<p style="font-size:80px;">Who/What is this program for?</p>
-					<p>Testing</p>
+				Who/What is this program for?
 				</section>
 				<section>Goals of this workshop</section>
 				<section>What is GIS</section>
