--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
 					<li>Mapbox</li>
 					<li>Flaneur Publishing</li>
 				</section>
-				<section>
-				Who/What is this program for?
-				</section>
+				<section>Who/What is this program for?</section>
 				<section>Goals of this workshop</section>
 				<section>What is GIS</section>
 				<section>Goals for GIS</section>
@@ -54,7 +52,7 @@
 				<section>Geomerging</section>
 				<section>GitHub</section>
 				<section>Make a GitHub repository</section>
-				<section>Make a GitHub respository continued</section>
+				<section>Make a GitHub repository continued</section>
 				<section>QGIS to GitHub</section>
 				<section>Mapbox: What is it?</section>
 				<section>How to put layers into Mapbox</section>
