--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
 				<section>Before using QGIS: Make sure you have the right repository</section>
 				<section>Set up OSM Map</section>
 				<section>Georeferencing: What is it?</section>
-				<section>Georeferencing</section>
-				<section>Georeferencing</section>
-				<section>Georeferencing</section>
-				<section>Georeferencing</section>
+				<section>
+					<section>Georeferencing</section>
+					<section>Georeferencing</section>
+					<section>Georeferencing</section>
+					<section>Georeferencing</section>
+				</section>
 				<section>Geomerging</section>
 				<section>Geomerging</section>
 				<section>GitHub</section>
