--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
 				<section>How to put layers into Mapbox</section>
 				<section>MapBox continued</section>
 				<section>Flaneur</section>
-				<section>Flaneur continued</section>
-				<section>Flaneur continued</section>
-				<section>Flaneur continued</section>
-				<section>Flaneur continued</section>
-				<section>Flaneur continued</section>
-				<section>Flaneur continued</section>
+				<section>
+					<section>Flaneur continued</section>
+					<section>Flaneur continued</section>
+					<section>Flaneur continued</section>
+					<section>Flaneur continued</section>
+					<section>Flaneur continued</section>
+					<section>Flaneur continued</section>
+				</section>
 				<section>Additional</section>
 			</div>
 		</div>
