--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 					<li>Mapbox</li>
 					<li>Flaneur Publishing</li>
 				</section>
-				<section>Who/What is this program for?</section>
+				<section>
+					<p>Who/What is this program for?</p>
+					<img src="img/Qgis.png" alt="" class="center" width="800px" height="400"/>
+				</section>
 				<section>Goals of this workshop</section>
 				<section>What is GIS</section>
 				<section>Goals for GIS</section>
