--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 				<section>
 					<p>Who/What is this program for?</p>
 					<img src="img/Qgis.png" alt="" class="center" width="800px" height="400"/>
+					<p>This workshop is an introduction to QGIS for those who aren't within the geography department</p>
+					<p>We will cover: QGIS, georeferencing, geomerging, Mapbox, and Github publishing. </p>
 				</section>
 				<section>Goals of this workshop</section>
 				<section>What is GIS</section>
