--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<section>
 					<p>Who/What is this program for?</p>
 					<img src="img/Qgis.png" alt="" class="center" width="600px" height="400"/>
-					<p style="font-size:20px;">This workshop is an introduction to QGIS for those who aren't within the geography department</p>
+					<p style="font-size:20px;">This workshop is an introduction to QGIS for those who aren't within the geography department.</p>
 					<p style="font-size:20px;">We will cover: QGIS, georeferencing, geomerging, Mapbox, and Github publishing. </p>
 				</section>
 				<section>Goals of this workshop</section>
