--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
 					<p style="font-size:20px;">This workshop is an introduction to QGIS for those who aren't within the geography department.</p>
 					<p style="font-size:20px;">We will cover: QGIS, georeferencing, geomerging, Mapbox, and Github publishing. </p>
 				</section>
-				<section>Goals of this workshop</section>
+				<section>
+					<p>Goals of this workshop</p>
+					<p>By the end of the program we will have something like this:</p>
+					<a href="url"> https://visualizela.github.io/flaneur/</a>
+					<img src="img/Boyleheights.png" alt="" class="center" width="600px" height="400"/>
+				</section>									
 				<section>What is GIS</section>
 				<section>Goals for GIS</section>
 				<section>The use of GIS for non-geography disciplines</section>
