--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 				</section>
 				<section>
 					<p>Goals of this workshop</p>
-					<p>By the end of the program we will have something like this:</p>
+					<p style="font-size:40px;">By the end of the program we will have something like this:</p>
 					<a href="url"> https://visualizela.github.io/flaneur/</a>
-					<img src="img/Boyleheights.png" alt="" class="center" width="600px" height="400"/>
+					<img src="img/BoyleHeights.png" alt="" class="center" width="600px" height="400"/>
 				</section>									
 				<section>What is GIS</section>
 				<section>Goals for GIS</section>
