--- a/index.html
+++ b/index.html
@@ -43,7 +43,14 @@
 					<a href="url"> https://visualizela.github.io/flaneur/</a>
 					<img src="img/BoyleHeights.png" alt="" class="center" width="600px" height="400"/>
 				</section>									
-				<section>What is GIS</section>
+				<section>
+				<p>What is GIS</p>
+					<li>GIS: Geographic Information System</li>
+					<li>Designed to capture, store, manipulate, analyze, manage, and present spatial or geographic data.</li>
+					<li>ArcGIS by Esri commonly used</li>
+					<li>QGIS: Open source version</li>
+					<img src="img/GIS.jpg" alt="" class="center" width="600px" height="400"/>
+				</section>
 				<section>Goals for GIS</section>
 				<section>The use of GIS for non-geography disciplines</section>
 				<section>Why QGIS</section>
