--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
 				</section>
 				<section>
 					<p>Goals of this workshop</p>
-					<p style="font-size:40px;">By the end of the program we will have something like this:</p>
+					<p style="font-size:30px;">By the end of the program we will have something like this:</p>
 					<a href="url"> https://visualizela.github.io/flaneur/</a>
 					<img src="img/BoyleHeights.png" alt="" class="center" width="600px" height="400"/>
 				</section>									
 				<section>
 				<p>What is GIS</p>
-					<li>GIS: Geographic Information System</li>
-					<li>Designed to capture, store, manipulate, analyze, manage, and present spatial or geographic data.</li>
-					<li>ArcGIS by Esri commonly used</li>
-					<li>QGIS: Open source version</li>
+					<li style="font-size:30px;">GIS: Geographic Information System</li>
+					<li style="font-size:30px;">Designed to capture, store, manipulate, analyze, manage, and present spatial or geographic data.</li>
+					<li style="font-size:30px;">ArcGIS by Esri commonly used</li>
+					<li style="font-size:30px;">QGIS: Open source version</li>
 					<img src="img/GIS.jpg" alt="" class="center" width="600px" height="400"/>
 				</section>
 				<section>Goals for GIS</section>
