--- a/index.html
+++ b/index.html
@@ -51,8 +51,18 @@
 					<li style="font-size:20px;">QGIS: Open source version</li>
 					<img src="img/GIS.jpg" alt="" class="center" width="600px" height="400"/>
 				</section>
-				<section>Goals for GIS</section>
-				<section>The use of GIS for non-geography disciplines</section>
+				<section>
+					<p>Goals for GIS</p>
+					<p> Making maps that are Accessible, Public, and Interactive through utilizing new or already existing data in order to represent information in new ways.</p>
+					<p> Maps are a very good resource for presenting things like historical trajectories, population information, city planning, law history, and many other areas in multiple disciplines. </p>
+					<p> Disciplines that can use GIS in their research: Law, History, Medicine, Sociology, Climatology, Political Science, Art, Anthropology, Geology, Linguistics, Economics, and many more.</p>
+				</section>
+				<section>
+					<p>The use of GIS for non-geography disciplines</p>
+					<li> Research, historical comparison, publishing</li>
+					<li> Ideally GIS enables humanities scholars to discover relationships of memory, artifact, and experience that exist in a particular place and across time. Although successfully used by other disciplines, efforts by humanists to apply GIS and the spatial analytic method in their studies have been limited and halting.</li>
+					<img src="img/Humanities.jpg" alt="" class="center" width="400px" height="800"/>
+				</section>
 				<section>Why QGIS</section>
 				<section>What we will be doing today</section>
 				<section>What you will need</section>
