--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<li style="font-size:20px;"> Ideally GIS enables humanities scholars to discover relationships of memory, artifact, and experience that exist in a particular place and across time. Although successfully used by other disciplines, efforts by humanists to apply GIS and the spatial analytic method in their studies have been limited and halting.</li>
 					<img src="img/Humanities.jpg" alt="" class="center" width="400px" height="800"/>
 				</section>
-				<section<section>Links</section></section>
+				<section><section>Links</section></section>
 				<section>Why QGIS</section>
 				<section>What we will be doing today</section>
 				<section>What you will need</section>
