--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<img src="img/Humanities.jpg" alt="" class="center" width="400px" height="800"/>
 				</section>
 				<section>
-					<section><p>Links</p></section>
+					<section>Georeferencing</section>
 				</section>
 				<section>Why QGIS</section>
 				<section>What we will be doing today</section>
