--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 				<section>
 					<p>Further links</p>
 					<a href="url"> https://www.blogs.hss.ed.ac.uk/tools-of-the-trade/use-gis-humanities-social-sciences/</a>
-					<a href="url"> https://libguides.wustl.edu/c.php?g=46935&p=4435069</a>
-					<a href="url"> https://gis.usc.edu/blog/the-application-of-geographic-and-information-science-gis-in-earth-sciences/</a>
-					<a href="url"> https://www.gisforscience.com/</a>
+					<br><a href="url"> https://libguides.wustl.edu/c.php?g=46935&p=4435069</a>
+					<br><a href="url"> https://gis.usc.edu/blog/the-application-of-geographic-and-information-science-gis-in-earth-sciences/</a>
+					<br><a href="url"> https://www.gisforscience.com/</a>
 				</section>
 				<section>Why QGIS</section>
 				<section>What we will be doing today</section>
