--- a/index.html
+++ b/index.html
@@ -70,39 +70,83 @@
 					<br><a href="url"> https://gis.usc.edu/blog/the-application-of-geographic-and-information-science-gis-in-earth-sciences/</a>
 					<br><a href="url"> https://www.gisforscience.com/</a>
 				</section>
-				<section>Why QGIS</section>
-				<section>What we will be doing today</section>
-				<section>What you will need</section>
-				<section>Additional Plugins</section>
-				<section>Before using QGIS: Check your images</section>
-				<section>Before using QGIS: Make sure you have the right repository</section>
-				<section>Set up OSM Map</section>
-				<section>Georeferencing: What is it?</section>
 				<section>
-					<section>Georeferencing</section>
-					<section>Georeferencing</section>
-					<section>Georeferencing</section>
-					<section>Georeferencing</section>
+					<p>Why QGIS</p>
+					<p style="font-size:20px;">Open source cross-platform desktop geographic information system.</p>
+					<p style="font-size:20px;">Works for Mac/PC/Linux.</p>
+					<p style="font-size:20px;">Unlicensed and developed by various programmers around the world.</p>
+					<img src="img/Qgislogo.png" alt="" class="center" width="600px" height="300"/>
 				</section>
-				<section>Geomerging</section>
-				<section>Geomerging</section>
-				<section>GitHub</section>
-				<section>Make a GitHub repository</section>
-				<section>Make a GitHub repository continued</section>
-				<section>QGIS to GitHub</section>
-				<section>Mapbox: What is it?</section>
-				<section>How to put layers into Mapbox</section>
-				<section>MapBox continued</section>
-				<section>Flaneur</section>
 				<section>
-					<section>Flaneur continued</section>
-					<section>Flaneur continued</section>
-					<section>Flaneur continued</section>
-					<section>Flaneur continued</section>
-					<section>Flaneur continued</section>
-					<section>Flaneur continued</section>
+					<p>What we will be doing today</p>
+					<li style="font-size:20px;">Learning the basics of georeferencing.</li>
+					<li style="font-size:20px;">Publishing: From print to online.</li>
+					<li style="font-size:20px;">GitHub as a repository.</li>
+					<img src="img/Southla.png" alt="" class="center" width="400px" height="600"/>
 				</section>
-				<section>Additional</section>
+				<section>
+					<p>What you will need</p>
+				</section>
+				<section>
+					<p>Additional Plugins</p>
+				</section>
+				<section>
+					<p>Before using QGIS: Check your images</p>
+				</section>
+				<section>
+					<p>Before using QGIS: Make sure you have the right repository</p>
+				</section>
+				<section>
+					<p>Set up OSM Map</p>
+				</section>
+				<section>
+					<p>Georeferencing: What is it?</p>
+				</section>
+				<section>
+					<section><p>Georeferencing</p></section>
+					<section><p>Georeferencing</p></section>
+					<section><p>Georeferencing</p></section>
+					<section><p>Georeferencing</p></section>
+				</section>
+				<section>
+					<p>Geomerging</p>
+				</section>
+				<section>
+					<p>Geomerging</p>
+				</section>
+				<section>
+					<p>GitHub</p>
+				</section>
+				<section>
+					<p>Make a GitHub repository</p>
+				</section>
+				<section>
+					<p>Make a GitHub repository continued</p>
+				</section>
+				<section>
+					<p>QGIS to GitHub</p>
+				</section>
+				<section>
+					<p>Mapbox: What is it?</p>
+				</section>
+				<section>
+					<p>How to put layers into Mapbox</p>
+				</section>
+				<section>
+					<p>MapBox continued</p>
+				</section>
+				<section>
+					<p>Flaneur</p>
+				</section>
+				<section>
+					<section><p>Flaneur continued</p></section>
+					<section><p>Flaneur continued</p></section>
+					<section><p>Flaneur continued</p></section>
+					<section><p>Flaneur continued</p></section>
+					<section><p>Flaneur continued</p></section>
+					<section><p>Flaneur continued</p></section>
+				</section>
+				<section><p>Additional</p></section>
 			</div>
 		</div>
 
