--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 				</section>
 				<section>
 					<p>What you will need</p>
-					<p style="font-size:40px;">QGIS version 3.10 or 3.12 which can be downloaded atqgis.org</p>
+					<p style="font-size:30px;">QGIS version 3.10 or 3.12 which can be downloaded at qgis.org</p>
 						<i style="font-size:20px;">3.10 is the most stable while 3.12 has more features, both work for this particular workshop so the choice is up to you.</i>
-					<p>Folder:</p>
+					<p style="font-size:30px;">Folder:</p>
 						<i style="font-size:20px;">Features a file titled Map.tiff and Key.jpeg. These will be the materials that we will work with. They have been digitized at 600 dpi (dots per inch) at the VKC library.</i>
 				</section>
 				<section>
