--- a/index.html
+++ b/index.html
@@ -87,13 +87,17 @@
 				<section>
 					<p>What you will need</p>
 					<p style="font-size:30px;">QGIS version 3.10 or 3.12 which can be downloaded at qgis.org</p>
-						<p style="font-size:20px;"><i>3.10 is the most stable while 3.12 has more features, both work for this particular workshop so the choice is up to you.</i></p>
+						<p style="font-size:20px;">3.10 is the most stable while 3.12 has more features, both work for this particular workshop.</p>
 					<p style="font-size:30px;">Folder:</p>
 						<p style="font-size:20px;">Features a file titled Map.tiff and Key.jpeg. These will be the materials that we will work with. They have been digitized at 600 dpi (dots per inch) at the VKC library.</p>
 				</section>
 				<section>
 					<p>Additional Plugins</p>
-					
+					<p style="font-size:20px;">There are a few things that you are going to want to add to your QGIS.</p>
+					<p style="font-size:20px;">To find plugins go to the taskbar and click plugins – manage plugins, this will open a new window where you can search for the two plugins below:</p>
+						<li style="font-size:20px;">Quickmapservices: Used to input a base map which we will use for georeferencing.</li>
+						<li style="font-size:20px;">QGIStoWeb: Used for publishing via Github when you wish to go straight from the app to a finished product.</li>
+							<p style="font-size:15px;">For this workshop this isn’t necessary, but it is useful if you are just publishing the map online.</p>
 				</section>
 				<section>
 					<p>Before using QGIS: Check your images</p>
