--- a/index.html
+++ b/index.html
@@ -97,13 +97,15 @@
 					<p style="font-size:20px;">To find plugins go to the taskbar and click plugins – manage plugins, this will open a new window where you can search for the two plugins below:</p>
 						<li style="font-size:20px;">Quickmapservices: Used to input a base map which we will use for georeferencing.</li>
 						<li style="font-size:20px;">QGIStoWeb: Used for publishing via Github when you wish to go straight from the app to a finished product.</li>
-							<p style="font-size:15px;">For this workshop this isn’t necessary, but it is useful if you are just publishing the map online.</p>
+							<p style="font-size:15px;">QGIStoWeb isn’t necessary for this workshop, but it is useful if you are just publishing the map online.</p>
 				</section>
 				<section>
 					<p>Before using QGIS: Check your images</p>
 				</section>
 				<section>
 					<p>Before using QGIS: Make sure you have the right repository</p>
+					<p style="font-size:20px;">For this project we are only using two images which doesn’t require much, but if you wish to pursue this further and start digitizing other maps/metadata then before you georeference get in the habit of labeling your map pieces and your metadata and putting them in places that are easy to access/re-access.</p>
+					<p style="font-size:20px;">For the VKC government planning documents we used a google drive and input the names of each file into a large google sheet as a way to organize them.</p>
 				</section>
 				<section>
 					<p>Set up OSM Map</p>
