--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
 				</section>
 				<section>
 					<p>Set up OSM Map</p>
+					<img src="img/OSM.png" alt="" class="center" width="500px" height="400"/>
+					<p style="font-size:30px;">Follow the image within QGIS: Web - QuickMapServices - OSM - OSM Standard</p>
 				</section>
 				<section>
 					<p>Georeferencing: What is it?</p>
