--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 					<p style="font-size:30px;">Georeferencing is the process of assigning real-world coordinates to each pixel of the raster.</p>
 					<p style="font-size:30px;">Taking the map image that you have and attaching that to an open street map.</p>
 					<p style="font-size:30px;">Historical maps, planning maps, building plans, transportation plans, etc.</p>
-					<img src="img/Georeferencehistory.jpg" alt="" class="center" width="500px" height="300"/>
+					<img src="img/GeoreferenceHistory.jpg" alt="" class="center" width="500px" height="300"/>
 				</section>
 				<section>
 					<section><p>Georeferencing</p></section>
