--- a/index.html
+++ b/index.html
@@ -120,8 +120,20 @@
 					<img src="img/GeoreferenceHistory.jpg" alt="" class="center" width="500px" height="300"/>
 				</section>
 				<section>
-					<section><p>Georeferencing</p></section>
-					<section><p>Georeferencing</p></section>
+					<section>
+						<p>Georeferencing</p>
+						<img src="img/Georeference.png" alt="" class="center" width="500px" height="300"/>
+						<p style="font-size:30px;">Once the background map is created go to: Raster - Georeferencer</p>
+					</section>
+					<section>
+						<p>Georeferencing</p>
+						<img src="img/Georeference2.png" alt="" class="center" width="500px" height="100"/>
+						<p style="font-size:30px;">A new window will pop up: <br>
+							Click on Open Raster and it will prompt you to open the .tiff files from your computer. <br>
+							Click on this to open up the image that you wish to georeferenced. </p>
+						<img src="img/Georeference3.png" alt="" class="center" width="200px" height="100"/>
+						<p style="font-size:30px;">This series of buttons are to add georeferencing points: Add, delete, move</p>
+					</section>
 					<section><p>Georeferencing</p></section>
 					<section><p>Georeferencing</p></section>
 				</section>
