--- a/index.html
+++ b/index.html
@@ -132,9 +132,18 @@
 							Click on Open Raster and it will prompt you to open the .tiff files from your computer. <br>
 							Click on this to open up the image that you wish to georeferenced. </p>
 						<img src="img/Georeference3.png" alt="" class="center" width="200px" height="100"/>
-						<p style="font-size:30px;">This series of buttons are to add georeferencing points: Add, delete, move</p>
+						<p style="font-size:30px;">This series of buttons are to add georeferencing points: Add, delete, move.</p>
 					</section>
-					<section><p>Georeferencing</p></section>
+					<section>
+						<p>Georeferencing</p>
+						<p style="font-size:30px;"> When you click on the “Add points” button the cursor will change. <br>
+						Click on a point on the image and this pop-up window will show. <br>
+						Click on the “From Map Canvas” button both windows (this plus the georeferencer) will go away to expose the OSM map behind it.<br>
+						Simply click on the area that closely corresponds to the image area you clicked and that will connect the .tiff to the map.<br>
+						You must do this at least six times for the georeference to work, the more points you put in the more accurate the georeference.
+						</p>
+						<img src="img/Georeference4.png" alt="" class="center" width="300px" height="300"/>
+					</section>
 					<section><p>Georeferencing</p></section>
 				</section>
 				<section>
