--- a/index.html
+++ b/index.html
@@ -144,7 +144,16 @@
 						</p>
 						<img src="img/Georeference4.png" alt="" class="center" width="300px" height="300"/>
 					</section>
-					<section><p>Georeferencing</p></section>
+					<section>
+						<p>Georeferencing</p>
+						<p style="font-size:20px;">Set the transformation parameters: <br>
+						Note: You can do this immediately or you can wait until you’ve finished georeferencing which will cause this to pop up.<br>
+						Transformation type: Polynomial 2<br>
+						Resampling method: Nearest neighbor<br>
+						Target SRS: EPSG3B57 – WGS 84 / Pseudo-Mercator<br>
+						Compression: LZW
+						<img src="img/Georeference5.png" alt="" class="center" width="300px" height="300"/>
+					</section>
 				</section>
 				<section>
 					<p>Geomerging</p>
