--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 						Transformation type: Polynomial 2<br>
 						Resampling method: Nearest neighbor<br>
 						Target SRS: EPSG3B57 – WGS 84 / Pseudo-Mercator<br>
-						Compression: LZW
+						Compression: LZW <br>
 						<img src="img/Georeference5.png" alt="" class="center" width="300px" height="300"/>
 					</section>
 				</section>
