--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 						Simply click on the area that closely corresponds to the image area you clicked and that will connect the .tiff to the map.<br>
 						You must do this at least six times for the georeference to work, the more points you put in the more accurate the georeference.
 						</p>
-						<img src="img/Georeference4.png" alt="" class="center" width="300px" height="300"/>
+						<img src="img/Georeference4.png" alt="" class="center" width="450px" height="450"/>
 					</section>
 					<section>
 						<p>Georeferencing</p>
@@ -151,7 +151,7 @@
 						Transformation type: Polynomial 2<br>
 						Resampling method: Nearest neighbor<br>
 						Target SRS: EPSG3B57 – WGS 84 / Pseudo-Mercator<br>
-						Compression: LZW <br>
+						Compression: LZW <br> </p>
 						<img src="img/Georeference5.png" alt="" class="center" width="300px" height="300"/>
 					</section>
 				</section>
