--- a/index.html
+++ b/index.html
@@ -184,15 +184,9 @@
 				</section>
 				<section>
 					<section<p>Flaneur</p></section>
-					<section><p>Flaneur continued</p></section>
-					<section><p>Flaneur continued</p></section>
-					<section><p>Flaneur continued</p></section>
-					<section><p>Flaneur continued</p></section>
-					<section><p>Flaneur continued</p></section>
-					<section><p>Flaneur continued</p></section>
 				</section>
 				<section>
-					<section><p>Flaneur continued</p></section>
+					<section><p>Flaneur</p></section>
 					<section><p>Flaneur continued</p></section>
 					<section><p>Flaneur continued</p></section>
 					<section><p>Flaneur continued</p></section>
