--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 					<section<p>Flaneur</p></section>
 				</section>
 				<section>
-					<section><p>Flaneur continued</p></section>
+					<section><p>Flaneur</p></section>
 					<section><p>Flaneur continued</p></section>
 					<section><p>Flaneur continued</p></section>
 					<section><p>Flaneur continued</p></section>
