--- a/index.html
+++ b/index.html
@@ -183,10 +183,8 @@
 					<p>MapBox continued</p>
 				</section>
 				<section>
-					<section<p>Flaneur</p></section>
-				</section>
-				<section>
 					<section><p>Flaneur</p></section>
+					<section><p>Flaneur continued</p></section>
 					<section><p>Flaneur continued</p></section>
 					<section><p>Flaneur continued</p></section>
 					<section><p>Flaneur continued</p></section>
