--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 				</section>
 				<section>
 					<p>Geomerging</p>
-					<img src="img/Merge1.png" alt="" class="center" width="400px" height="200"/><br><img src="img/Merge2.png" alt="" class="center" width="300px" height="200"/>
+					<img src="img/Merge1.png" alt="" class="center" width="400px" height="200"/><img src="img/Merge2.png" alt="" class="center" width="300px" height="200"/>
 					<p style="font-size:15px;"> Geomerging is only needed if you have multiple maps that you are going to input on a website that has a layer limit (like Mapbox).<br>
 						If you followed the process by georeferencing individual files then this is what you should do. <br>
 						At the taskbar go to Raster - Miscellaneous - Merge.<br>
