--- a/index.html
+++ b/index.html
@@ -167,7 +167,14 @@
 	
 				</section>
 				<section>
-					<p>Geomerging</p>
+					<p>Geomerging Continued</p>
+					<p style="font-size:15px;">
+						Once this is concluded there will likely be a black border that obscures a significant amount of the map.<br>
+						Click on the information icon (the blue circle with an I in it) and click on the black border.<br>
+						Take the number from that and go to the raster file Geomerge, open it by double-clicking on the merged file.<br>
+						In the transparency page, you are going to put the number you found in the No Data Value - Additional no data value area, which will remove the black.<br>
+						It will also shift the colors of the map to be brighter to go to the symbology page and mess around with the color rendering. For this map, I changed the blending mode, brightness, and contrast. This might be very different depending on the maps that you have. There is also the option to convert the raster from PCT to RGB by going to Raster - Conversion - PCT to RGB… and inputting the correct layer.<br>
+					</p>
 				</section>
 				<section>
 					<p>GitHub</p>
