--- a/index.html
+++ b/index.html
@@ -178,6 +178,11 @@
 				</section>
 				<section>
 					<p>GitHub</p>
+					<p style="font-size:30px;">
+						Online version control that uses Git.<br>
+						It allows you to host projects and uses Git to track the files.<br>
+					</p>
+					<img src="img/Github.png" alt="" class="center" width="400px" height="200"/>
 				</section>
 				<section>
 					<p>Make a GitHub repository</p>
