--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
 					<section><p>Flaneur continued</p></section>
 				</section>
 				<section><p>Additional</p></section>
+				<section><p>Thank you</p></section>
 			</div>
 		</div>
 
