--- a/index.html
+++ b/index.html
@@ -186,9 +186,18 @@
 				</section>
 				<section>
 					<p>Make a GitHub repository</p>
+					<img src="img/Repo.jpg" alt="" class="center" width="500px" height="200"/>
+					<p style="font-size:45px;"> Open an account and click the plus symbol at the top right.</p>
 				</section>
 				<section>
 					<p>Make a GitHub repository continued</p>
+					<img src="img/Repo2.jpg" alt="" class="center" width="400px" height="400"/>
+					<p style="font-size:30px;"> Give it a name (make sure not to use spaces) and a description.<br>
+						Make it public or private. <br>
+						Initialize with README is only necessary if you are starting from scratch, since we are copying from another repository it isn’t necessary.<br>
+						Click the create repository button at the bottom.<br>
+					</p>
+
 				</section>
 				<section>
 					<p>QGIS to GitHub</p>
