--- a/index.html
+++ b/index.html
@@ -201,15 +201,34 @@
 				</section>
 				<section>
 					<p>QGIS to GitHub</p>
+					<p>my internship advisor for the past two quarters </p>
+					<br>
+					<a href="url"> https://maptimela.github.io/map-website/</a>
 				</section>
 				<section>
 					<p>Mapbox: What is it?</p>
+					<p> Mapbox is an open source mapping program.</p>
+					<p> Requires creating an account. </p>
+					<img src="img/mapbox.jpg" alt="" class="center" width="350px" height="350"/>
+					
 				</section>
 				<section>
 					<p>How to put layers into Mapbox</p>
+					<p style="font-size:20px;">In mapbox you are going to want to create an account and go to “studio,” which can be found by clicking on your own icon.
+					<br> Click on the “New Style” button and pick whichever style best suits your interest. For this we will choose the “basic” style template.
+Once this has been accomplished go to the area which we will be adding map information, in this case Los Angeles, from the standard area which is Paris, France.
+					<br> When you have found yourself in the area click on the layers tab (top left button near the components button) and then click on plus button (Add New Layer).</p.
+					<img src="img/layers.png" alt="" class="center" width="200px" height="350"/>
 				</section>
 				<section>
 					<p>MapBox continued</p>
+					<p style="font-size:20px;">Now click the upload data button and put in your modified .tiff files that you georeferenced from QGIS. Keep in mind that these files need to be .tiffs and they also need to be small enough files (8 bits) or else you will get an error message.
+					<br>
+					Once you upload your tiles make sure that you click and drag the files into the layers zone in the Mapbox. Also keep in mind that for certain profiles (Free tier) you can only put in 15 layers within a given map.
+					<br>
+					Once this is complete click the blue “Publish” button on the top right.
+						<br></p>
+					<img src="img/layers2.png" alt="" class="center" width="200px" height="350"/>
 				</section>
 				<section>
 					<section><p>Flaneur</p></section>
