--- a/index.html
+++ b/index.html
@@ -231,9 +231,35 @@ Once this has been accomplished go to the area which we will be adding map infor
 					<img src="img/layers2.png" alt="" class="center" width="200px" height="350"/>
 				</section>
 				<section>
-					<section><p>Flaneur</p></section>
-					<section><p>Flaneur continued</p></section>
-					<section><p>Flaneur continued</p></section>
+					<section><p>Flaneur</p>
+					<img src="img/flaneur.png" alt="" class="center" width="350px" height="100"/>
+					<p> Copy this repository into your own by clicking the clone or download button: <br>
+					<a href="url"> https://github.com/kirschbombe/flaneur</a>	
+					<br>
+					<p style="font-size:20px;">You can either import this repository or you can take the files and add them into the one that you created.
+					<br>
+						Go to settings and set the source as a master branch in order to see the link so that you are able to visualize the website.
+						</p>
+					</section>
+					<section><p>Flaneur continued</p>
+					<p style="font-size:20px;"> The first thing that you will do is eliminate/change things so that the website suits the information/maps that we will be putting into it.
+					<br>
+					The next few steps don’t need to be done in order but they should be accomplished before moving onto inputting the maps that we created through Mapbox into the github.
+					<br>
+					The first element that we will shift will be the home page. At its current state it is written exclusively about Flaneur which isn’t the information that we wish to provide.
+					<br>
+					On the page click on the home.md link then, one in, click the “edit this file” button on the top right of the screen, it will look like a pencil. Like so:
+					<img src="img/edit.png" alt="" class="center" width="200px" height="100"/>
+					</section>
+					<section><p>Flaneur continued</p>
+						<img src="img/flaneurhome.png" alt="" class="center" width="250px" height="150"/>
+						<p style="font-size:20px;"> You are going to edit the page to reflect the new data.
+						<br>
+						Next, we are going to go to the _posts folder on the main page and delete 2018-02-24-boulevardier.md as it will be unnecessary for this map. You can also go to the images folder and delete the two boulevardier.jpg images.
+						<br>
+						Note: if you delete everything within a folder it deletes the folder with it. To remedy this or to create a new folder click the “create new file” button and in the name put the name of your new folder with a / after it so that it looks like flaneur/folder/ and then add a test document like test.txt. You will eventually remove this test document for other documents but keep it in until you do that lest you accidently delete the folder again.
+						<.p>
+					</section>
 					<section><p>Flaneur continued</p></section>
 					<section><p>Flaneur continued</p></section>
 					<section><p>Flaneur continued</p></section>
