--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 					<p style="font-size:20px;">In mapbox you are going to want to create an account and go to “studio,” which can be found by clicking on your own icon.
 					<br> Click on the “New Style” button and pick whichever style best suits your interest. For this we will choose the “basic” style template.
 Once this has been accomplished go to the area which we will be adding map information, in this case Los Angeles, from the standard area which is Paris, France.
-					<br> When you have found yourself in the area click on the layers tab (top left button near the components button) and then click on plus button (Add New Layer).</p.
-					<img src="img/layers.png" alt="" class="center" width="200px" height="350"/>
+					<br> When you have found yourself in the area click on the layers tab (top left button near the components button) and then click on plus button (Add New Layer).</p>
+					<img src="img/Layers.png" alt="" class="center" width="200px" height="350"/>
 				</section>
 				<section>
 					<p>MapBox continued</p>
@@ -228,11 +228,11 @@ Once this has been accomplished go to the area which we will be adding map infor
 					<br>
 					Once this is complete click the blue “Publish” button on the top right.
 						<br></p>
-					<img src="img/layers2.png" alt="" class="center" width="200px" height="350"/>
+					<img src="img/Layers2.png" alt="" class="center" width="200px" height="350"/>
 				</section>
 				<section>
 					<section><p>Flaneur</p>
-					<img src="img/flaneur.png" alt="" class="center" width="350px" height="100"/>
+					<img src="img/Flaneur.png" alt="" class="center" width="350px" height="100"/>
 					<p> Copy this repository into your own by clicking the clone or download button: <br>
 					<a href="url"> https://github.com/kirschbombe/flaneur</a>	
 					<br>
@@ -248,17 +248,17 @@ Once this has been accomplished go to the area which we will be adding map infor
 					<br>
 					The first element that we will shift will be the home page. At its current state it is written exclusively about Flaneur which isn’t the information that we wish to provide.
 					<br>
-					On the page click on the home.md link then, one in, click the “edit this file” button on the top right of the screen, it will look like a pencil. Like so:
-					<img src="img/edit.png" alt="" class="center" width="200px" height="100"/>
+					On the page click on the home.md link then, one in, click the “edit this file” button on the top right of the screen, it will look like a pencil. Like so:</p>
+					<img src="img/Edit.png" alt="" class="center" width="200px" height="100"/>
 					</section>
 					<section><p>Flaneur continued</p>
 						<img src="img/flaneurhome.png" alt="" class="center" width="250px" height="150"/>
 						<p style="font-size:20px;"> You are going to edit the page to reflect the new data.
-						<br>
+						<br><br>
 						Next, we are going to go to the _posts folder on the main page and delete 2018-02-24-boulevardier.md as it will be unnecessary for this map. You can also go to the images folder and delete the two boulevardier.jpg images.
-						<br>
+						<br><br>
 						Note: if you delete everything within a folder it deletes the folder with it. To remedy this or to create a new folder click the “create new file” button and in the name put the name of your new folder with a / after it so that it looks like flaneur/folder/ and then add a test document like test.txt. You will eventually remove this test document for other documents but keep it in until you do that lest you accidently delete the folder again.
-						<.p>
+						</p>
 					</section>
 					<section><p>Flaneur continued</p></section>
 					<section><p>Flaneur continued</p></section>
