--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ Once this has been accomplished go to the area which we will be adding map infor
 					<img src="img/Edit.png" alt="" class="center" width="200px" height="100"/>
 					</section>
 					<section><p>Flaneur continued</p>
-						<img src="img/flaneurhome.png" alt="" class="center" width="250px" height="150"/>
+						<img src="img/Flaneurhome.png" alt="" class="center" width="250px" height="150"/>
 						<p style="font-size:20px;"> You are going to edit the page to reflect the new data.
 						<br><br>
 						Next, we are going to go to the _posts folder on the main page and delete 2018-02-24-boulevardier.md as it will be unnecessary for this map. You can also go to the images folder and delete the two boulevardier.jpg images.
